replace deprecated numberic constructors